--- a/modules/party_cog/locale/fr_FR.po
+++ b/modules/party_cog/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -216,9 +216,9 @@ msgctxt "field:party.party,logo:"
 msgid "Logo"
 msgstr "Logo"
 
-msgctxt "field:party.party,maiden_name:"
-msgid "Maiden Name"
-msgstr "Nom de Jeune Fille"
+msgctxt "field:party.party,birth_name:"
+msgid "Birth Name"
+msgstr "Nom de naissance"
 
 msgctxt "field:party.party,main_address:"
 msgid "Main Address"
