loan: Loan increments and payment automatic calculation during modification review : http://rietveld.coopengo.com/5100001/

--- a/modules/loan/CHANGELOG
+++ b/modules/loan/CHANGELOG
@@ -1,3 +1,5 @@
+* Calculate loan increments and amortization table on the fly during loan creation/modification
+
 Version 1.2 - 2014-07-01
 * Changelog file creation
 * Add wizard to display outstanding amounts
