Fix #274,#687 Simpler offered package http://rietveld.coopengo.com/3360001/

--- a/modules/contract/CHANGELOG
+++ b/modules/contract/CHANGELOG
@@ -1,3 +1,4 @@
+* Add possibility to subscribe several options at the same time with a package
 * Added Wizard to change start date of contract with propagation to related objects before activation.
 
 Version 1.2 - 2014-07-01
